--- a/Product.html
+++ b/Product.html
@@ -22,7 +22,7 @@ and open the template in the editor.
                 <div class="fixed-container">
                     
                 <form method="post" target="buy">
-                    <input type="text" value="1234" name="product" disabled="true" display="none">
+                    <input type="hidden" value="1234" name="product">
                     <button type="submit">Buy &#8377;1234</button>
                 </form>
                 <form method="post" target="Addcart">
